--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-midnight
 title: Emily N Peterson, PhD
-description: Department of Biostatistics and Bioinformatics
-Rollins School of Public Health, Emory University
+description: Department of Biostatistics and Bioinformatics, Emory University
+
